second commit updated with sqlite configurations

--- a/config/database.yml
+++ b/config/database.yml
@@ -44,5 +44,13 @@ production:
   password: gopi
   host: localhost
 
+#==================
+# if you use sqllite then use this 
+  # development:
+  # adapter: sqlite3
+  # database: db/development.sqlite3
+  # pool: 5
+  # timeout: 5000
+
 
 
