--- a/config/database.yml
+++ b/config/database.yml
@@ -1,4 +1,4 @@
-# if you use pgsql then use this setting 
+ # if you use pgsql then use this setting 
 # development:
 #   adapter: postgresql
 #   database: edu_ol_development
@@ -14,43 +14,43 @@
 # if you use mysql the use this settings
 
 
-development:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: online_development #change database name as you want
-  pool: 5
-  username: root   #user name while you created mysql installation
-  password: gopi  #password which you have given during mysql installation
-  host: localhost
+# development:
+#   adapter: mysql2
+#   encoding: utf8
+#   reconnect: false
+#   database: online_sep22-1_development #change database name as you want
+#   pool: 5
+#   username: root   #user name while you created mysql installation
+#   password:   #password which you have given during mysql installation
+#   host: localhost
 
-test:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: online_test
-  pool: 5
-  username: root
-  password: gopi
-  host: localhost
+# test:
+#   adapter: mysql2
+#   encoding: utf8
+#   reconnect: false
+#   database: online_sep22-1_test
+#   pool: 5
+#   username: root
+#   password: 
+#   host: localhost
 
-production:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: online_production
-  pool: 5
-  username: root
-  password: gopi
-  host: localhost
+# production:
+#   adapter: mysql2
+#   encoding: utf8
+#   reconnect: false
+#   database: online_sep22-1_production
+#   pool: 5
+#   username: root
+#   password: 
+#   host: localhost
 
 #==================
 # if you use sqllite then use this 
-  # development:
-  # adapter: sqlite3
-  # database: db/development.sqlite3
-  # pool: 5
-  # timeout: 5000
+  development:
+  adapter: sqlite3
+  database: db/development.sqlite3
+  pool: 5
+  timeout: 5000
 
 
 
